clusters/home/registry/app/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: registry
