clusters/home/registry/app/registry/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
spec:
  parentRefs:
    - name: gw-registry
      sectionName: https
  hostnames:
    - registry.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: registry
          port: 5000
